adds private parts :0

--- a/private/index.html
+++ b/private/index.html
@@ -7,7 +7,11 @@
   </head>
   <body ng-app="myApp">
 
+    <img ng-click="console.log('hello');" class="background" src="assets/big-world-map.svg">
     <div class="header">
+      <div class="sign-in">
+        <a href="/"><strong>log <br> out</strong></a>
+      </div>
       <img class="logo" src="assets/talent-exchange-logo.svg">
     </div>
 
@@ -34,10 +38,10 @@
     </div>
     
     <div class="footer"></div>
-    <script src="components/angular/angular.min.js"></script>
-    <script src="components/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script src="components/jquery/dist/jquery.min.js"></script>
-    <script src="js/home/home.js"></script>
-    <script src="js/app.js"></script>
+    <script src="../components/angular/angular.min.js"></script>
+    <script src="../components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="../components/jquery/dist/jquery.min.js"></script>
+    <script src="privatejs/userview/userview.js"></script>
+    <script src="privatejs/app.js"></script>
   </body>
 </html>
