--- a/public/js/home/home.html
+++ b/public/js/home/home.html
@@ -2,6 +2,6 @@
   <p class="tag-line">travel. teach. build. learn. live.<br> 
 empower the world.</p>
   <p class='i-am'>i am:</p>
-  <div class='button user-button'>a skilled human</div>
-  <div class='button org-button'>an organization</div>
+  <div class='button user-button' ng-click="userSignup()">a skilled dev</div>
+  <div class='button org-button'>a great org</div>
 </div>
