adds org call to user view

--- a/private/index.html
+++ b/private/index.html
@@ -41,6 +41,7 @@
     <script src="../components/angular/angular.min.js"></script>
     <script src="../components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="../components/jquery/dist/jquery.min.js"></script>
+    <script src="privatejs/userview/orgService.js"></script>
     <script src="privatejs/userview/userview.js"></script>
     <script src="privatejs/app.js"></script>
   </body>
