--- a/public/js/home/home.html
+++ b/public/js/home/home.html
@@ -1,4 +1,4 @@
-<div ng-controller="HomeCtrl">
+<div>
   <p class="tag-line">travel. teach. build. learn. live.<br> 
 empower the world.</p>
   <p class='i-am'>i am:</p>
